2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[dist] Also distribute AUTHORS file.

	* Makefile (FILES): Add AUTHORS.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[build] Update sed script that mines version info.

	* Makefile (VERSION): Only operate on the
	single line in version.h that begins w/ "char".

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Add forward delcs for "aux stuff" funcs.

	* superopt.c (ffs_internal, floor_log2, ceil_log2):
	Add forward decls prior to ‘insn_name’ declaration.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Convert some funcs from K&R style to prototypes.

	* superopt.c (ffs_internal, floor_log2, ceil_log2): ...here.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Add ‘\n\’ to separate assembly instructions.

	* longlong.h (add_ssaaaa, sub_ddmmss, umul_ppmm)
	(count_leading_zeros, umul_ppmmxx, udiv_qrnnd):
	...here, for various architectures.
	* superopt.h [sparc || __GNUC__]: #undef alloca.
	(PERFORM_ADD_CIO, PERFORM_ADD_CO, PERFORM_SUB_CIO, PERFORM_SUB_CO)
	(PERFORM_ADC_CIO, PERFORM_ADC_CO): Add ‘\n\’ to separate assembly
	instructions, for various architectures.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Include <stdlib.h> for ‘exit’.

	* superopt.c: #include <stdlib>.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	* COPYING: Update to GPLv3.

Sat Jun  3 01:28:17 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (random_word): Delete unused variable tot_bits.

Thu Jun  1 04:05:25 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (init_random_word): Make state1 have char type.
	Use random() on alpha, since srand48 doesn't work there.

Wed May 31 17:08:12 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (test_operands): Add -3, -2, 3, 30, 31, 32, 63, 64.
	(random_word): Return small numbers with high probability.

Sat May 27 18:32:03 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (N_RANDOM_TEST_OPERANDS): Set to 25000.